--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
 alembic==1.6.5
-click==8.0.1
-Flask==2.0.1
+aniso8601==9.0.1
+attrs==21.2.0
+click==7.1.2
+Flask==1.1.4
 Flask-Migrate==3.0.1
+flask-restx==0.4.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 importlib-metadata==4.5.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jsonschema==3.2.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 psycopg2==2.9.1
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2021.1
 six==1.16.0
 SQLAlchemy==1.4.18
 typing-extensions==3.10.0.0
-Werkzeug==2.0.1
+Werkzeug==1.0.1
 zipp==3.4.1
