--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==2.11.3
 jsonschema==3.2.0
 Mako==1.1.4
 MarkupSafe==2.0.1
+marshmallow==3.12.1
 psycopg2==2.9.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
