--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Migrate==3.0.1
 flask-restx==0.4.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+gunicorn==20.1.0
 importlib-metadata==4.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -17,6 +18,7 @@ marshmallow==3.12.1
 psycopg2==2.9.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-dotenv==0.18.0
 python-editor==1.0.4
 pytz==2021.1
 six==1.16.0
